--- a/dlog-server/dlog-server.csproj
+++ b/dlog-server/dlog-server.csproj
@@ -5,7 +5,6 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>dlog_server</RootNamespace>
-	<GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +15,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.24" />
     <PackageReference Include="Npgsql" Version="7.0.6" />
     <PackageReference Include="RestSharp" Version="110.2.0" />
+    <PackageReference Include="SkiaSharp" Version="2.88.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.3" />
   </ItemGroup>
